@@ -84,6 +84,7 @@ def quit():
         mixer.quit()
     except:
         pass
+    time._stop_timers()
     for module in (display, sprite, image, draw, time, event, key, mouse, transform, font, surfarray, mask, mixer):
         del(module)
     if env.jframe:
